<resources>
    <string name="app_name">workoutlog</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="email_required">Email is required</string>
    <string name="password_required">Password required</string>
    <string name="enter_firstname">Enter firstname</string>
    <string name="enter_passwordd">Enter password</string>
    <string name="enter_emaill">Enter email</string>
    <string name="enter_second_namee">Enter second name</string>
    <string name="confirm_password">confirm password</string>
    <string name="track">track</string>
    <string name="profile">profile</string>
    <string name="plan">plan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>